增加那年今日
在首页面做出了更改

--- a/pages/gaijin/gaijin.wxml
+++ b/pages/gaijin/gaijin.wxml
@@ -4,4 +4,5 @@
     <view>1.搜电影功能已经可以使用</view>
     <view>2.更换了部分页面丑图</view>
     <view>3.天气功能进一步改善</view>
+    <view>4.增加了首页那年今日模块，查看历史的今天发生的重大事件</view>
 </view>
