--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,3 +1,12 @@
+<swiper class='swiper2' indicator-dots="{{indicatorDots2}}"
+  autoplay="{{autoplay2}}" interval="{{interval2}}" duration="{{duration2}}" vertical="true" circular="true"  mode="widthFix">
+  <block wx:for="{{imgUrls2}}" wx:key="key">
+    <swiper-item>
+      <image class='notice-img' src='/imgs/2.png'></image>
+      <text class="itme_text2">{{item}}</text>
+    </swiper-item>
+  </block>
+</swiper>
 <swiper
   indicator-dots="{{indicatorDots}}"
   autoplay="{{autoplay}}"
@@ -66,11 +75,40 @@
     </view>
   </view>
 </view>
-<swiper class='swiper2' indicator-dots="{{indicatorDots2}}"
-  autoplay="{{autoplay2}}" interval="{{interval2}}" duration="{{duration2}}" vertical="true" circular="true"  mode="widthFix">
-  <block wx:for="{{imgUrls2}}" wx:key="key">
-    <swiper-item>
-      <text class="itme_text2">{{item}}</text>
-    </swiper-item>
+
+
+  <!-- <template name="movies">
+  <block wx:for="{{movies}}">
+    <view class="movie" bindtap="detail" id="{{item.id}}">
+            <view class="pic">
+                <image src="{{item.images.medium}}" mode="aspectFit" />
+            </view>
+            <view class="movie-info">
+                <view class="base-info">
+                     <text>{{item.text}}</text>
+                </view>
+            </view>
+            
+     </view>
+
+    <view class="hr"></view>
   </block>
-</swiper>
+  </template> -->
+<view class='today'>那年今日</view>
+
+  <!--index.wxml-->
+<import src="../template/item.wxml" />
+
+<scroll-view scroll-y="true" class="flex-row ui-list ui-border-t">
+  <template is="tItem" data="{{item}}" wx:for="{{events}}" wx:key="this" />
+  <view class="ui-tips">
+    <view wx:if="{{hidden}}">
+      <text>没有更多内容了</text>
+    </view>
+    <view wx:else>
+      <text>内容加载中...</text>
+    </view>
+  </view>
+</scroll-view>
+
+<loading hidden="{{hidden}}">Loading...</loading>
