--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -43,20 +43,37 @@ swiper image{
 }
 
 .swiper2 {
+
   width: 100%;
   height: 65rpx;
   background-color: #F7F7FA;
-  position: absolute;
+  /* position: absolute; */
   /* left: 0rpx; */
-  top: 700rpx;
+  /* top: 700rpx; */
    pointer-events: none;
     cursor: default;
 }
  
 .itme_text2 {
+
   font-size: 26rpx;
   color: #000;
   display: inline-block;
+  /* align-items: center; */
   z-index: 999;
-  margin-left: 60rpx;
+  margin-top: 21rpx;  
+  
+}
+/**历史的今天**/
+.today{
+  display: flex;
+  align-items: center;
+  /* 水平居中 */
+  justify-content: center;
+  margin-top: 30rpx;
+}
+.notice-img{
+  float: left;
+  height: 65rpx;
+  width: 65rpx;
 }
